Adding basic assets

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,6 +9,7 @@
     = csrf_meta_tag
 
     = stylesheet_link_tag :application
+    -# = javascript_include_tag :global
     = javascript_include_tag :application
 
     -# = remote_asset :javascript_include_tag, 'https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js'
